# kokkos-remote-spaces-1

./: CMakeLists.txt  reproducer.sh
benchmarks/access_overhead/: access_overhead.cpp  access_overhead_p2p_kernelconf.cpp
examples/: CMakeLists.txt
examples/benchmarks/access_overhead/: access_overhead_p2p.cpp
examples/benchmarks/misslatency/: misslatency.cpp
examples/benchmarks/poissonaccess/: poissonaccess.cpp
examples/benchmarks/randomaccess/: randomaccess.cpp
examples/cgsolve/parallel/: generate_matrix.hpp
scripts/: apply-clang-format
scripts/docker/: Dockerfile.openmpi
src/core/: Kokkos_RemoteSpaces.hpp  Kokkos_RemoteSpaces_DeepCopy.hpp  Kokkos_RemoteSpaces_LocalDeepCopy.hpp  Kokkos_RemoteSpaces_ViewMapping.hpp
src/features/racerlib/: RDMA_Engine.cpp  RDMA_Engine.hpp  RDMA_Interface.cpp  RDMA_Interface.hpp  RDMA_Worker.cpp
src/impl/cudardmaspace/: Kokkos_CudaRDMASpace.cpp  Kokkos_CudaRDMASpace.hpp  Kokkos_CudaRDMASpace_AllocationRecord.cpp  Kokkos_CudaRDMASpace_AllocationRecord.hpp  Kokkos_CudaRDMASpace_DataHandle.hpp  Kokkos_CudaRDMASpace_Ops.hpp  Kokkos_CudaRDMASpace_ViewTraits.hpp
src/impl/mpispace/: Kokkos_MPISpace.hpp  Kokkos_MPISpace_AllocationRecord.hpp
src/impl/nvshmemspace/: Kokkos_NVSHMEMSpace.cpp  Kokkos_NVSHMEMSpace.hpp  Kokkos_NVSHMEMSpace_AllocationRecord.hpp  Kokkos_NVSHMEMSpace_BlockOps.hpp  Kokkos_NVSHMEMSpace_Ops.hpp
unit_tests/: CMakeLists.txt  Test_Atomic.cpp  Test_LocalDeepCopy.cpp  Test_RemoteAccess.cpp  Test_Subview.cpp
unit_tests/experimental/: Test_CachedView.cpp
(+1 files in other folders)
